<resources>
    <string name="app_name">CheckId</string>
    <string name="action_settings">Settings</string>
    <string name="appVersion">v2.1.0.1</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">close_drawer</string>
    <string name="btnLookupCMO">Lookup CMO</string>
    <string name="btnLookupCMOMH">Lookup CMO / MH</string>
    <string name="lblSearchBy">Search By</string>
    <string name="lblStartDate">Start Date</string>
    <string name="lblEndDate">End Date</string>
    <string name="lblNomorOrder">Nomor Order</string>
    <string name="btnSearchOrder">Search</string>
    <string name="menu">Main Menu</string>
    <string name="cekOrder">Check Order</string>
    <string name="btnOpen">Open</string>
    <string name="lblSearchByStatus">Status</string>
    <string name="btnOk">OK</string>
    <string name="taskChanged">Task status has been changed.</string>
    <string name="chooseOne"> Choose One </string>
    <string name="workflowByForm"> Workflow by Form</string>
    <string name="pleaseChooseOne">Please Select an Action</string>
    <string-array name="cbSearchByStatus">
        <item>ALL</item>
        <item>On Survey</item>
        <item>On CA</item>
    </string-array>
    <string-array name="cbUpdateOrder">
        <item>Open Order</item>
        <item>Cancel Order</item>
    </string-array>
    <string-array name="cbOrderReassign">
        <item>Date</item>
        
    </string-array>
    <string-array name="cbSearchBy">
        <item>Date</item>
        <item>Month</item>
        <item>Estimation Days</item>
    </string-array>
    <string-array name="cbSearchByMonth">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="title_mn_home">Home</string>
    <string name="title_mn_tasklist">TASK LIST</string>
    <string name="title_mn_log">LOG</string>
    <string name="title_mn_reportsummary">Report Summary</string>
    <string name="title_mn_depositreport">Deposit Report</string>
    <string name="title_mn_absentin">ATTENDANCE IN</string>
    <string name="title_mn_synchronize">SYNCHRONIZE</string>
    <string name="title_mn_about">ABOUT</string>
    <string name="title_mn_exit">EXIT</string>
    <string name="title_mn_newtask">NEW TASK</string>
    <string name="title_mn_surveyperformance">SURVEY PERFORMANCE</string>
    <string name="title_mn_surveyverification">SURVEY VERIFICATION</string>
    <string name="title_mn_surveyapproval">SURVEY APPROVAL</string>
    <string name="title_mn_checkorder">Check Order</string>
    <string name="title_mn_creditsimulation">Credit Simulation</string>
    <string name="title_mn_news">News</string>
    <string name="title_mn_promo">Promo</string>
    <string name="title_mn_orderassign">Order Assignment</string>
    <string name="title_mn_orderreassign">Order Re-Assignment</string>
    <string name="title_mn_cancelorder">Cancel Order</string>
    <string name="title_mn_surveyassign">SURVEY ASSIGNMENT</string>
    <string name="title_mn_surveyreassign">SURVEY RE-ASSIGNMENT</string>
    <string name="title_mn_verification_bybranch">VERIFICATION BY BRANCH</string>
    <string name="title_mn_approval_bybranch">APPROVAL BY BRANCH</string>
    <string name="title_mn_changepassword">CHANGE PASSWORD</string>
    <string name="title_mn_paymenthistory">Payment History</string>
    <string name="title_mn_installmentschedule">Installment Schedule</string>
    <string name="title_mn_absentout">Check Out</string>
    <string name="title_mn_setting">Settings</string>
    <string name="login_desc">Login to CheckId Application</string>
    <string name="text_gps">GPS</string>
    <string name="filter_by">Filter By</string>
    <string name="news_not_found">News not found</string>
    <string name="nama_customer">Nama Customer</string>
    <string name="form_name">Form Name</string>
    <string name="toast_crash">Ooooops ! MSSSVY crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="title_activity_survey_verification_action">Survey Verification</string>
    <string name="hello_world">Hello world!</string>
    <string name="selectOne">Select One</string>
    <string name="reject_failed">Rejection Task Failed</string>
    <string name="reject_success">Task Rejected</string>
    <string name="approve_failed">Approval Task Failed</string>
    <string name="approve_success">Task Approved</string>
    <string name="get_suggestion_user">Getting Suggestion User...</string>
    <string name="title_activity_developer_option">Dev Options</string>
    <string name="changelog_v230"><![CDATA[Changes: <br/>
1. Support Multilingual <br/>
2. Update compatibility for Android M <br/>
3. Support refresh location by tap GPS Icon <br/>
4. Increase performance <br/>
5. Decrease memory usage <br/>
6. Add cirle radius in map viewer if accuracy available <br/>
7. Loading not relevant Questions automatically <br/>
8. Support Copy value from other questions <br/>
9. Support advanced question validation <br/>
10. Minor Bug fixes]]></string>
    <string name="action_not_available">Action not available</string>
    <string name="changelog_v2310"><![CDATA[Changes: <br/>
1. Support copy value with condition]]></string>
    <string name="changelog_v2320"><![CDATA[Changes: <br/>
1. Fixing profile and cover image if exit
]]></string>
    <string name="changelog_v200"><![CDATA[Changes: <br/>
1. Add support for Timeline Task <br/>
2. Add support for navigation menu]]></string>
<string name="changelog_v210"><![CDATA[Changes: <br/>
1. Add Support for Survey Approval<br/>
2. Add Support for Survey Verification]]></string>
    <string name="changelog_v220"><![CDATA[Changes: <br/>
1. Add Support for Survey Approval By Branch<br/>
2. Add Support for Survey Verification By Branch<br/>
3. Add Support for Reschedule Survey]]></string>
    <string name="changelog_v2330"><![CDATA[Changes: <br/>
1. Fixing Synchronize<br/>
2. Fixing Timeline for Attendance<br/>
3. Fixing load question answer<br/>
4. Add check root device]]></string>
    <string name="changelog_v2340"><![CDATA[Changes: <br/>
1. Aplhanumeric Password requirement]]></string>
    <string name="changelog_v2350"><![CDATA[Changes: <br/>
1. Minor Bug Fixes<br/>
2. Removing Inactive Form]]></string>
    <string name="changelog_v2360"><![CDATA[Changes: <br/>
1. Minor Bug Fixes]]></string>
    <string name="changelog_v2370"><![CDATA[Changes: <br/>
1. Minor Bug Fixes
2. Fixing GPS issues]]></string>
    <string name="changelog_v2380"><![CDATA[Changes: <br/>
1. Minor Bug Fixes]]></string>
    <string name="changelog_v2390"><![CDATA[Changes: <br/>
1. Minor Bug Fixes]]></string>
    <string name="changelog_v23100"><![CDATA[Changes: <br/>
1. Minor Bug Fixes]]></string>
    <string name="changelog_v23110"><![CDATA[Changes: <br/>
1. Minor Bug Fixes]]></string>
    <string name="changelog_v23120"><![CDATA[Changes: <br/>
1. Minor Bug Fixes]]></string>
    <string name="changelog_v23130"><![CDATA[Changes: <br/>
1. Minor Bug Fixes]]></string>
    <string name="changelog_v23140"><![CDATA[Changes: <br/>
1. Minor Bug Fixes]]></string>
    <string name="changelog_v23150"><![CDATA[Changes: <br/>
1. Minor Bug Fixes]]></string>
    <string name="changelog_v23160"><![CDATA[Changes: <br/>
1. Minor Bug Fixes]]></string>
    <string name="changelog_v23170"><![CDATA[Changes: <br/>
1. Minor Bug Fixes]]></string>
    <string name="changelog_v23180"><![CDATA[Changes: <br/>
1. Minor Bug Fixes]]></string>
    <string name="changelog_v23190"><![CDATA[Changes: <br/>
1. Minor Bug Fixes]]></string>
    <string name="changelog_v2400"><![CDATA[Changes: <br/>
1. Add device information at about<br/>
2. Support online lookup<br/>
3. Task list view : box or list]]></string>
    <string name="changelog_v2500"><![CDATA[Changes: <br/>
1. New user interface<br/>
2. Add file synchronize<br/>
3. Minor bug fixes]]></string>
    <string name="changelog_v3000"><![CDATA[Changes: <br/>
1. More readable messages and information<br/>
2. Support push themes<br/>
3. Support round profile picture<br/>
4. Add image timestamp<br/>
5. Minor bug fixes]]></string>
    <string name="changelog_v3001"><![CDATA[Changes: <br/>
1. Add toggle password visibiliy in Change Password popup<br/>
2. Change connection timeout message<br/>
3. Fix bug Fake GPS Deactivation dialog does not showing up when using mock up location<br/>
4. Fix bug warning message for user inactive<br/>
5. Add Database Migration from Version 2.5 to 3.<br/>
6. Fix bug task header missing after save draft<br/>
7. Fix bug dropdown search type in Survey Performance page]]></string>
    <string name="changelog_v3002"><![CDATA[Changes: <br/>
1. Fix Search Timeline Uploading Task option not showing up although there are tasks that have uploading status.<br/>
2. Fix bug not all options appear in radio button question dynamic form.<br/>
3. Fix bug Fake GPS Deactivation dialog does not showing up when using mock up location.<br/>
4. Fix bug developer option at top right not showing up.<br/>
5. Fix bug task answers are disappeared when start doing task from draft after change user.<br/>
6. Add regex checking for customer name input.]]></string>
    <string name="changelog_v3003"><![CDATA[Changes: <br/>
1. Perbaikan google play service update bisa diabaikan.<br/>
2. Penambahan submit lokasi untuk reschedule task.<br/>
3. Perbaikan task list tidak update.<br/>
4. Perbaikan notifikasi uploading.<br/>
5. Set default bulan berjalan di survey performance.<br/>
6. Perbaikan log online.<br/>
7. Penambahan notification channel untuk foreground service notification.<br/>
8. Perbaikan pertanyaan tipe option dan multiple memiliki duplikasi jawaban.<br/>
9. Perbaikan pertanyaan option choice filter tidak tampil.<br/>
10.Penjagaan format datetime dengan panjang lebih dari 14 karakter pada DateTimePicker.<br/>
11.Perbaikan crash saat submit task manual menggunakan long click.]]></string>
    <string name="changelog_v3004"><![CDATA[Changes: <br/>
1. Fix push theme.<br/>
2. Show application running notification.<br/>
3. Fix crash when open task list.<br/>
4. Fix task filter feature.<br/>
5. Fix minor bugs.]]></string>
    <string name="changelog_v3005"><![CDATA[Changes: <br/>
1. Penambahan pengecekan dan update status task survey approval atau verification sesuai data di server.<br/>
2. Fix minor bugs.]]></string>
     <string name="changelog_v3006"><![CDATA[Changes: <br/>
1. Perbaikan fragment overlapped.<br/>
3. Perbaikan sync question set.<br/>
4. Perbaikan filter status pending tidak ada hasil.]]></string>
    <string name="changelog_v3007"><![CDATA[Changes: <br/>
1. Perbaikan add taskd untuk log online.<br/>
2. Perbaikan bug di viewholder.<br/>
3. Perbaikan answer location, brand, dan model task approval tidak tampil pada halaman review.<br/>
4. Menseragamkan format request submit task melalui force send, auto send, dan send biasa.<br/>
5. Perbaikan bug timeline task header tertukar ketika diklik.<br/>
6. Perbaikan minor bug.]]></string>
    <string name="changelog_v3008"><![CDATA[Changes: <br/>
1. Perbaikan minor bug.]]></string>
    <string name="changelog_v3009"><![CDATA[Changes: <br/>
1. Add bypass developer mode feature.<br/>
2. Fix timeline when upgrading from 2.5 to 3.0 version.<br/>
3. Fix crash handle question with choice filter.<br/>
4. Fix minor bug.]]></string>
    <string name="changelog_v30013"><![CDATA[Changes: <br/>
1. Add support location service in Android >= O.<br/>
2. Add support location service for oppo, vivo and xiaomi devices.<br/>
3. Fix notification new task in Android >= O.<br/>
4. Fix image printing on Android >= O.<br/>
5. Fix minor bug.]]></string>
</resources>